--- a/androlua/src/main/res/layout/activity_lua_editor.xml
+++ b/androlua/src/main/res/layout/activity_lua_editor.xml
@@ -9,17 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Execute" />
+
     <Button
         android:id="@+id/stop"
-        android:onClick="onClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="stop" />
+
     <EditText
-        android:id="@+id/lua_lalala"
+        android:id="@+id/lua_args"
         android:layout_width="match_parent"
-        android:text="hello"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="args"
+        android:text="args" />
 
     <cn.vove7.androlua.luautils.LuaEditor
         android:id="@+id/source"
@@ -54,10 +57,10 @@
         android:id="@+id/statusText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
         android:maxLines="10"
         android:minLines="4"
         android:scrollbars="vertical"
-        android:focusable="true"
         android:text="TextView"
         android:textColor="@android:color/secondary_text_dark_nodisable" />
 </LinearLayout>
