--- a/app/src/main/res/layout/float_voice.xml
+++ b/app/src/main/res/layout/float_voice.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -9,15 +10,17 @@
         android:id="@+id/voice"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:scaleType="fitCenter"
-        android:src="@drawable/voice" />
+        android:background="@drawable/voice_bkg"
+        android:scaleType="center"
+        android:src="@drawable/ic_keyboard_voice_black_24dp" />
 
     <TextView
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="#b6393939"
+        android:textColor="#fff"
         android:textStyle="bold" />
 
 </LinearLayout>
