--- a/app/src/main/res/layout/activity_permission_manager.xml
+++ b/app/src/main/res/layout/activity_permission_manager.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activityies.PermissionManagerActivity">
+    tools:context=".activities.PermissionManagerActivity">
 
     <ListView
         android:id="@+id/list"
