--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activityies.VoiceTestActivity">
+    tools:context=".activities.VoiceTestActivity">
 
     <TextView
         android:id="@+id/result_text"
