--- a/app/src/main/res/layout/float_voice.xml
+++ b/app/src/main/res/layout/float_voice.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/voice"
         android:layout_width="50dp"
         android:layout_height="50dp"
