--- a/app/src/main/res/layout/item_inst.xml
+++ b/app/src/main/res/layout/item_inst.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:padding="10dp"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@color/blue_500" />
+            android:src="@color/blue_500"
+            android:visibility="invisible" />
 
 
         <LinearLayout
@@ -26,13 +30,8 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#6e6e6e" />
-
 </LinearLayout>
