--- a/app/src/main/res/menu/menu_inst_detail.xml
+++ b/app/src/main/res/menu/menu_inst_detail.xml
@@ -6,4 +6,8 @@
         android:icon="@drawable/ic_edit_white_24dp"
         android:title="@string/text_edit"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/ic_delete_white_24dp"
+        android:title="@string/text_delete" />
 </menu>
