--- a/app/src/main/res/layout/activity_new_inst.xml
+++ b/app/src/main/res/layout/activity_new_inst.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fcfdfe"
     tools:context=".activities.NewInstActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/title_new_inst"
-            app:titleTextColor="?attr/colorAccent" />
+            app:title="@string/title_new_inst" />
         <!--app:layout_scrollFlags="scroll"-->
     </android.support.design.widget.AppBarLayout>
 
@@ -33,6 +33,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/parent_lay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:visibility="gone"
+                android:background="@color/red_500">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_parent_action"
+                    android:textColor="@color/primaryLight"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/parent_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_parent_action"
+                    android:textColor="@color/primaryLight"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,8 +142,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/text_regular_expression"
                 android:textColor="?attr/colorAccent" />
 
