--- a/app/src/main/res/menu/menu_inst_detail.xml
+++ b/app/src/main/res/menu/menu_inst_detail.xml
@@ -9,5 +9,11 @@
     <item
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_delete_white_24dp"
-        android:title="@string/text_delete" />
+        android:title="@string/text_delete"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_add_follow"
+        android:icon="@drawable/ic_add_white_24dp"
+        android:title="@string/text_add_follow_action"
+        app:showAsAction="ifRoom" />
 </menu>
