--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,12 @@
         android:layout_height="wrap_content"
         android:onClick="go2Welcome"
         android:text="Welcome" />
+    <Button
+        android:id="@+id/button_mark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Marked Management" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -80,6 +86,12 @@
         <Button
             android:id="@+id/stop_wakeup"
             android:text="stop wakeup"
+            android:onClick="onClick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/start_wakeup"
+            android:text="open wakeup"
             android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
