--- a/app/src/main/res/layout/activity_real_main.xml
+++ b/app/src/main/res/layout/activity_real_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
+            app:labelVisibilityMode="unlabeled"
             android:layout_marginEnd="0dp"
             android:background="?android:attr/windowBackground"
             app:menu="@menu/main_nav_menu" />
