--- a/app/src/main/res/layout/item_mine_features.xml
+++ b/app/src/main/res/layout/item_mine_features.xml
@@ -2,19 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/app_foround"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="2dp"
+    android:background="@color/app_foround">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:background="?attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <View
             android:id="@+id/line"
             android:layout_width="4dp"
-            android:layout_height="30dp"
+            android:layout_height="27dp"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="20dp"
             android:background="@color/google_blue" />
@@ -26,7 +26,7 @@
             android:layout_gravity="center_vertical"
             android:text="@string/text_settings"
             android:textColor="@color/primary_text"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 </LinearLayout>
