--- a/app/src/main/res/menu/menu_inst_detail.xml
+++ b/app/src/main/res/menu/menu_inst_detail.xml
@@ -12,6 +12,11 @@
         android:title="@string/text_edit"
         app:showAsAction="always" />
     <item
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_share_24dp"
+        android:title="@string/text_share"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/text_delete"
