--- a/Common/src/main/res/layout/toast_colorful.xml
+++ b/Common/src/main/res/layout/toast_colorful.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textStyle="bold"
         android:textColor="@color/fff"
         android:textSize="14sp" />
 </LinearLayout>
