--- a/app/src/main/res/layout/activity_new_inst.xml
+++ b/app/src/main/res/layout/activity_new_inst.xml
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/text_purpose"
+                    android:text="@string/text_action_title"
                     android:textColor="?attr/colorAccent" />
 
                 <android.support.design.widget.TextInputLayout
