--- a/app/src/main/res/layout/dialog_sel_script.xml
+++ b/app/src/main/res/layout/dialog_sel_script.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
+        android:typeface="monospace"
         android:gravity="start|top"
         android:minLines="15" />
 
