--- a/app/src/main/res/menu/menu_inst_detail.xml
+++ b/app/src/main/res/menu/menu_inst_detail.xml
@@ -26,4 +26,9 @@
         android:icon="@drawable/ic_add_white_24dp"
         android:title="@string/text_add_follow_action"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_as_global"
+        android:title="设为全局命令"
+        android:visible="false"
+        app:showAsAction="never" />
 </menu>
