--- a/app/src/main/res/layout/dialog_share_inst.xml
+++ b/app/src/main/res/layout/dialog_share_inst.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@id/example_text"
-        android:text="@string/text_example"
+        android:text="@string/text_examples"
         android:textColor="@color/colorAccent" />
 
     <EditText
