--- a/app/src/main/res/layout/item_mine_features.xml
+++ b/app/src/main/res/layout/item_mine_features.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:background="@color/app_foround"
-    android:elevation="2dp">
+    android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/app_foround"
+        android:elevation="0.6dp">
 
-        <View
-            android:id="@+id/line"
-            android:layout_width="4dp"
-            android:layout_height="27dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="20dp"
-            android:background="@color/google_blue" />
+        <LinearLayout
+            android:id="@+id/click_body"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="?attr/selectableItemBackground"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/text_settings"
-            android:textColor="@color/primary_text"
-            android:textSize="16sp" />
+            <View
+                android:id="@+id/line"
+                android:layout_width="4dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="20dp"
+                android:background="@color/google_blue" />
 
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/text_settings"
+                android:textColor="@color/primary_text"
+                android:textSize="16sp" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
